fix: avoid overlapping info

--- a/InterneTaakAfhandeling.Web.Client/src/assets/_mixin-theme.scss
+++ b/InterneTaakAfhandeling.Web.Client/src/assets/_mixin-theme.scss
@@ -4,5 +4,4 @@
   --ita-dashboard-tables-column-gap: 4vw;
   --ita-dashboard-tables-column-gap: 4vw;
   --ita-cv-details-sections-column-gap: 2rem;
-  --ita-cv-details-sections-column-gap: 4vw;
 }
